Fix: show fingerprint and scroll if it overflows

--- a/branding/css/susemanager-mixins.less
+++ b/branding/css/susemanager-mixins.less
@@ -62,3 +62,10 @@ th a.orderBy{
   border-bottom: 1px solid #eee;
   padding-bottom: 10px;
 }
+
+.fingerprintCell > * {
+    overflow-x: auto !important;
+    display: inline-block;
+    width: 100%;
+    vertical-align: middle;
+}
